--- a/TestingAnalysis.ipynb
+++ b/TestingAnalysis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of ancestors is: 2 ,the LX is: 30 ,and the LY is: 30\n",
-      "765\n"
+      "The number of ancestors is: 2 ,the LX is: 120 ,and the LY is: 50\n",
+      "5100\n"
      ]
     }
    ],
@@ -43,7 +43,17 @@
     "MAX = int((LX * LY)*.85) #This will act as TEND FROM NOW ON.\n",
     "#Go to 80-90% of when it is filled up.\n",
     "\n",
-    "print(MAX)"
+    "print(MAX)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open(\"new_file.csv\",\"w+\") as my_csv:\n",
+    "    csvWriter = csv.writer(my_csv,delimiter=',')\n",
+    "    csvWriter.writerows(a)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
